--- a/mods/index.html
+++ b/mods/index.html
@@ -16,7 +16,7 @@
 
     <body>
         <div id="cards">
-            <div style="width: 100%;" class="card" onclick="window.location.href = 'https://totem.lol/mods'">
+            <div style="width: 100%; height: 500px; top: 275px;" class="card" onclick="window.location.href = 'https://totem.lol/mods'">
               <div class="card-content">
                 <div class="card-info-wrapper">
                   <div class="card-info">
