--- a/mods/index.html
+++ b/mods/index.html
@@ -15,8 +15,8 @@
     </head>
 
     <body>
-        <div id="cards">
-            <div style="width: 100%; height: 500px; top: 275px;" class="card" onclick="window.location.href = 'https://totem.lol/mods'">
+        <div id="cards" style="top: 250px;">
+            <div style="width: 100%; height: 500px;" class="card" onclick="window.location.href = 'https://totem.lol/mods'">
               <div class="card-content">
                 <div class="card-info-wrapper">
                   <div class="card-info">
