--- a/mods/index.html
+++ b/mods/index.html
@@ -16,8 +16,8 @@
     </head>
 
     <body>
-        <div id="cards" style="top: 250px;">
-            <div style="width: 100%; height: 500px;" class="card" onclick="window.location.href = 'https://totem.lol/mods'">
+        <div id="cards" style="top: 235px;">
+            <div style="width: 100%; height: 525px;" class="card" onclick="window.location.href = 'https://totem.lol/mods'">
               <div class="card-content">
                 <div class="card-info-wrapper">
                   <div class="card-info">
@@ -41,6 +41,8 @@
                       <h4>PattysMoreStuff-Stable-1.4.1_1</h4>
                       <h4>TerraBlender-3.0.0.163</h4>
                       <h4>Xaeros_Minimap_23.5.0</h4>
+                      <h4>MrCrayfish's-Furniture-Mod-7.0.0</h4>
+                      <h4>Dungeons-Arise-2.1.56.1</h4>
                     </div>
                   </div>
                 </div>
